--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-xl mt-3">
+        <nav class="navbar navbar-expand-lg mt-3">
             <div class="container-fluid">
                 <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarToggler">
                     <img src="images/textalignright.png" alt="navbar-menu">
                 </button>
-                <a href="#" class="navbar-brand m-0 ms-3 m-xl-0 text-light fw-bold fs-1">Iran NFT</a>
-                <div class="d-xl-none">
+                <a href="#" class="navbar-brand m-0 ms-3 m-lg-0 text-light fw-bold fs-1">Iran NFT</a>
+                <div class="d-lg-none">
                     <a href="#" class="me-2"><img src="images/shoppingcart.png" alt=""></a>
                     <a href="#" class="me-2"><img src="images/Group 154.png" alt=""></a>
                     <a href="#"><img src="images/user.png" alt=""></a>
                 </div>
-                <div class="collapse navbar-collapse justify-content-between ps-3 p-xl-2 rounded-3 bg_dark" id="navbarToggler">
-                    <ul class="navbar-nav w-75 justify-content-center gap-3 gap-xl-5">
+                <div class="collapse navbar-collapse justify-content-between ps-3 p-lg-2 rounded-3 bg_dark" id="navbarToggler">
+                    <ul class="navbar-nav w-75 justify-content-center gap-3 gap-lg-4 pt-2 pt-lg-0 pb-2 pb-lg-0">
                         <li class="nav-item">
                             <a href="#" class="nav-link text-secondary fw-bold fs-5 active">صفحه اصلی</a>
                         </li>
@@ -37,11 +37,11 @@
                             <a href="#" class="nav-link text-secondary fw-bold fs-5">تبلیغ NFT</a>
                         </li>
                     </ul>
-                    <div class="d-none d-xl-block">
+                    <div class="d-none d-lg-block text-nowrap">
                         <a href="#" class="me-3">
                             <img src="images/shoppingcart.png" alt="shopping">
                         </a>
-                        <a href="#" class="bg-orange text-light fw-bold p-3 rounded-3">
+                        <a href="#" class="bg-orange text-light fw-bold p-3 rounded-3 text-nowrap">
                             <img src="images/user.png" alt="login">
                             ورود / ثبت نام
                         </a>
