coding header main html template and styles

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-    <header>
+    <header class="position-relative">
         <nav class="navbar navbar-expand-lg mt-3">
-            <div class="container-fluid">
+            <div class="container">
                 <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarToggler">
                     <img src="images/textalignright.png" alt="navbar-menu">
                 </button>
@@ -22,7 +22,8 @@
                     <a href="#" class="me-2"><img src="images/Group 154.png" alt=""></a>
                     <a href="#"><img src="images/user.png" alt=""></a>
                 </div>
-                <div class="collapse navbar-collapse justify-content-between ps-3 p-lg-2 rounded-3 bg_dark" id="navbarToggler">
+                <div class="collapse navbar-collapse justify-content-between ps-3 p-lg-2 rounded-3 bg_dark"
+                    id="navbarToggler">
                     <ul class="navbar-nav w-75 justify-content-center gap-3 gap-lg-4 pt-2 pt-lg-0 pb-2 pb-lg-0">
                         <li class="nav-item">
                             <a href="#" class="nav-link text-secondary fw-bold fs-5 active">صفحه اصلی</a>
@@ -49,6 +50,58 @@
                 </div>
             </div>
         </nav>
+        <div class="container mt-5">
+            <div class="row">
+                <div class="col-12 col-lg-7 d-flex flex-column justify-content-center">
+                    <div>
+                        <p class="text-light fw-light fs-4 text-center text-lg-start">
+                            بازار جهانی توکن‌های غیرمثلی بر بستر بلاکچین پلیگان
+                        </p>
+                        <h1 class="fw-bold text-light main-header-title my-5 text-center text-lg-start">
+                            دنیای NFT های <span class="color-orange">شگفت انگیز</span>
+                        </h1>
+                        <div class="position-relative main_image_header d-lg-none mb-5 mb-lg-0">
+                            <img src="images/Rectangle 48.png" class="img-fluid d-inline">
+                            <span class="position-absolute bg-transparent header_image_backdrop"></span>
+                            <img src="images/f2572704ffdbaeb121525a519d8a18f3.jpg"
+                                class="position-absolute header_main_image">
+                            <div class="count_user_site d-flex justify-content-between align-items-center px-4">
+                                <img src="images/Group 117.png" class="count_user_img">
+                                <span class="text-light fw-medium font_size_24 text-nowrap">500+ هنرمند</span>
+                            </div>
+                        </div>
+                        <p class="color-text fw-light fs-3 text-center text-lg-start">
+                            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است
+                        </p>
+                        <div class="mt-5 d-flex justify-content-center gap-4">
+                            <form class="border-FF1F00 rounded-pill position-relative py-3 padding_button w_60 d-none d-lg-block">
+                                <button class="border-0 bg-transparent position-absolute top_5 right_16">
+                                    <img src="images/searchnormal1.png">
+                                </button>
+                                <input type="text" class="border-0 bg-transparent text-light fs-5 w-100 h-100 fw-medium"
+                                    placeholder="جستجو NFT ها و هنرمندان">
+                            </form>
+                            <a href="#"
+                                class="background_gradient1 w_40 w_70 py-3 py-lg-0 fw-bold fs-5 text-light d-flex justify-content-center align-items-center rounded-pill">
+                                دریافت مشاوره رایگان
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-5 pt-3 d-none d-lg-block">
+                    <div class="position-relative main_image_header">
+                        <img src="images/Rectangle 48.png" class="img-fluid d-inline">
+                        <span class="position-absolute bg-transparent header_image_backdrop"></span>
+                        <img src="images/f2572704ffdbaeb121525a519d8a18f3.jpg"
+                            class="position-absolute header_main_image">
+                        <div class="count_user_site d-flex justify-content-between align-items-center px-4">
+                            <img src="images/Group 117.png" class="count_user_img">
+                            <span class="text-light fw-medium font_size_24 text-nowrap">500+ هنرمند</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/main.js"></script>
