--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="position-relative">
         <nav class="navbar navbar-expand-lg mt-3">
-            <div class="container">
+            <div class="container-fluid container-md">
                 <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarToggler">
                     <img src="images/textalignright.png" alt="navbar-menu">
                 </button>
@@ -50,11 +50,11 @@
                 </div>
             </div>
         </nav>
-        <div class="container mt-5">
+        <div class="container-fluid container-md mt-5">
             <div class="row">
                 <div class="col-12 col-lg-7 d-flex flex-column justify-content-center">
                     <div>
-                        <p class="text-light fw-light fs-4 text-center text-lg-start">
+                        <p class="text-light fw-light fs-4 text-center text-lg-start main-header-text mb-0">
                             بازار جهانی توکن‌های غیرمثلی بر بستر بلاکچین پلیگان
                         </p>
                         <h1 class="fw-bold text-light main-header-title my-5 text-center text-lg-start">
