coding wallet title html template $ styles

--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
                             لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است
                         </p>
                         <div class="mt-5 d-flex justify-content-center gap-4">
-                            <form class="border-FF1F00 rounded-pill position-relative py-3 padding_button w_60 d-none d-lg-block">
+                            <form
+                                class="border-FF1F00 rounded-pill position-relative py-3 padding_button w_60 d-none d-lg-block">
                                 <button class="border-0 bg-transparent position-absolute top_5 right_16">
                                     <img src="images/searchnormal1.png">
                                 </button>
@@ -103,6 +104,30 @@
             </div>
         </div>
     </header>
+    <main>
+        <div class="container-fluid container-md">
+            <div class="header_container_title mt-5 d-flex justify-content-between align-items-center">
+                <div class="d-flex align-items-center gap-3">
+                    <div
+                        class="d-flex align-items-center justify-content-center background_gradient1 rounded-circle icon_header_container">
+                        <img src="images/wallet2.png">
+                    </div>
+                    <div class="text-light">
+                        <h5 class="fs-3 fw-medium">کیف پــول</h5>
+                        <span class="fs-5 fw-light">
+                            Wallet
+                        </span>
+                    </div>
+                </div>
+                <div class="">
+                    <a href="#">
+                        <span class="fs-5 text-light">مشاهده همه</span>
+                        <img src="images/arrowleft.png">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </main>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/main.js"></script>
 </body>
