coding wallet html template & styles

--- a/index.html
+++ b/index.html
@@ -106,24 +106,133 @@
     </header>
     <main>
         <div class="container-fluid container-md">
-            <div class="header_container_title mt-5 d-flex justify-content-between align-items-center">
+            <div class="header_container_title my-5 d-flex justify-content-between align-items-center">
                 <div class="d-flex align-items-center gap-3">
                     <div
                         class="d-flex align-items-center justify-content-center background_gradient1 rounded-circle icon_header_container">
                         <img src="images/wallet2.png">
                     </div>
                     <div class="text-light">
-                        <h5 class="fs-3 fw-medium">کیف پــول</h5>
-                        <span class="fs-5 fw-light">
+                        <h5 class="fs-3 fw-medium header_title">کیف پــول</h5>
+                        <span class="fs-5 fw-light header_subtitle">
                             Wallet
                         </span>
                     </div>
                 </div>
                 <div class="">
                     <a href="#">
-                        <span class="fs-5 text-light">مشاهده همه</span>
-                        <img src="images/arrowleft.png">
+                        <span class="fs-5 text-light arro_text">مشاهده همه</span>
+                        <img src="images/arrowleft.png" class="arrow_icon">
                     </a>
+                </div>
+            </div>
+            <div class="row row-gap-4">
+                <div class="col-6 col-sm-4 col-xl-2">
+                    <div class="wallet_box wallet_box_1 rounded-2 position-relative">
+                        <div class="inner_wallet-box rounded-2 h-100 d-flex flex-column justify-content-center align-items-center">
+                            <div>
+                                <img src="images/Group 19.png">
+                            </div>
+                            <div>
+                                <span class="text-secondary fs-4 d-block mt-4">Meta Mask</span>
+                            </div>
+                        </div>
+                        <div class="corner_wallet-box corner_wallet-box-1 position-absolute"></div>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-4 col-xl-2">
+                    <div class="wallet_box wallet_box_2 rounded-2 position-relative">
+                        <div class="inner_wallet-box rounded-2 h-100 d-flex flex-column justify-content-center align-items-center">
+                            <div>
+                                <img src="images/pngaaa 1.png">
+                            </div>
+                            <div>
+                                <span class="text-secondary fs-4 d-block mt-4">Coinbase</span>
+                            </div>
+                        </div>
+                        <div class="corner_wallet-box corner_wallet-box-2 position-absolute"></div>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-4 col-xl-2">
+                    <div class="wallet_box wallet_box_3 rounded-2 position-relative">
+                        <div class="inner_wallet-box rounded-2 h-100 d-flex flex-column justify-content-center align-items-center">
+                            <div>
+                                <img src="images/image 1.png">
+                            </div>
+                            <div>
+                                <span class="text-secondary fs-4 d-block mt-4">Exodus</span>
+                            </div>
+                        </div>
+                        <div class="corner_wallet-box corner_wallet-box-3 position-absolute"></div>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-4 col-xl-2">
+                    <div class="wallet_box wallet_box_4 rounded-2 position-relative">
+                        <div class="inner_wallet-box rounded-2 h-100 d-flex flex-column justify-content-center align-items-center">
+                            <div>
+                                <img src="images/uniswap-coinuni.png">
+                            </div>
+                            <div>
+                                <span class="text-secondary fs-4 d-block mt-4">Uniswap</span>
+                            </div>
+                        </div>
+                        <div class="corner_wallet-box corner_wallet-box-4 position-absolute"></div>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-4 col-xl-2">
+                    <div class="wallet_box wallet_box_5 rounded-2 position-relative">
+                        <div class="inner_wallet-box rounded-2 h-100 d-flex flex-column justify-content-center align-items-center">
+                            <div>
+                                <img src="images/Group 25.png">
+                            </div>
+                            <div>
+                                <span class="text-secondary fs-4 d-block mt-4">Bainance</span>
+                            </div>
+                        </div>
+                        <div class="corner_wallet-box corner_wallet-box-5 position-absolute"></div>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-4 col-xl-2">
+                    <div class="wallet_box wallet_box_1 rounded-2 position-relative">
+                        <div class="inner_wallet-box rounded-2 h-100 d-flex flex-column justify-content-center align-items-center">
+                            <div>
+                                <img src="images/Group 19.png">
+                            </div>
+                            <div>
+                                <span class="text-secondary fs-4 d-block mt-4">Meta Mask</span>
+                            </div>
+                        </div>
+                        <div class="corner_wallet-box corner_wallet-box-1 position-absolute"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid container-md">
+            <div class="header_container_title my-5 d-flex justify-content-between align-items-center">
+                <div class="d-flex align-items-center gap-3">
+                    <div
+                        class="d-flex align-items-center justify-content-center background_gradient1 rounded-circle icon_header_container">
+                        <img src="images/Vector (4).png">
+                    </div>
+                    <div class="text-light">
+                        <h5 class="fs-3 fw-medium header_title">پیشنهادهای داغ</h5>
+                        <span class="fs-5 fw-light header_subtitle">
+                            Hot Bids
+                        </span>
+                    </div>
+                </div>
+                <div class="">
+                    <a href="#">
+                        <span class="fs-5 text-light arro_text">مشاهده همه</span>
+                        <img src="images/arrowleft.png" class="arrow_icon">
+                    </a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-4">
+                    <div class="hot__bides-box">
+                        
+                    </div>
                 </div>
             </div>
         </div>
