coding hot bids html template & styles

--- a/index.html
+++ b/index.html
@@ -228,10 +228,92 @@
                     </a>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-4">
-                    <div class="hot__bides-box">
-                        
+            <div class="row row-gap-3">
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="hot__bides-box p-3 rounded-4">
+                        <div class="hot__bides-box-top position-relative">
+                            <img src="images/image 5.png" class="w-100">
+                            <div class="hot__bides-box-info position-absolute d-flex gap-2 align-items-center">
+                                <div class="text-light d-flex gap-3 fs-4 rounded-pill py-2 px-4">
+                                    <span>8s</span>
+                                    <span>34m</span>
+                                    <span>2h</span>
+                                </div>
+                                <div class="p-2 p-xl-3 rounded-circle">
+                                    <img src="images/heart.png" width="28">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="hot__bides-box-bottom mt-3 p-1">
+                            <h5 class="text-light text-end fw-medium fs-3">Digi Boy</h5>
+                            <p class="text-light text-end fw-lighter fs-5">By Negar</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <p class="text-light fw-light">آخرین پیشنهاد</p>
+                                <p class="text-light d-flex align-items-center">
+                                    ETH 2,78 
+                                    <img src="images/Group 67.png" class="ms-2">
+                                </p>
+                            </div>
+                            <a href="#" class="box-btn background_gradient1 text-light px-5 py-2 rounded-3 mt-1 d-inline-block">پیشنهاد سریع</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="hot__bides-box p-3 rounded-4">
+                        <div class="hot__bides-box-top position-relative">
+                            <img src="images/image 5 (1).png" class="w-100">
+                            <div class="hot__bides-box-info position-absolute d-flex gap-2 align-items-center">
+                                <div class="text-light d-flex gap-3 fs-4 rounded-pill py-2 px-4">
+                                    <span>8s</span>
+                                    <span>34m</span>
+                                    <span>2h</span>
+                                </div>
+                                <div class="p-2 p-xl-3 rounded-circle">
+                                    <img src="images/heart.png" width="28">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="hot__bides-box-bottom mt-3 p-1">
+                            <h5 class="text-light text-end fw-medium fs-3">Angry Ape</h5>
+                            <p class="text-light text-end fw-lighter fs-5">By Farshad</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <p class="text-light fw-light">آخرین پیشنهاد</p>
+                                <p class="text-light d-flex align-items-center">
+                                    ETH 2,78 
+                                    <img src="images/Group 67.png" class="ms-2">
+                                </p>
+                            </div>
+                            <a href="#" class="box-btn background_gradient1 text-light px-5 py-2 rounded-3 mt-1 d-inline-block">پیشنهاد سریع</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="hot__bides-box p-3 rounded-4">
+                        <div class="hot__bides-box-top position-relative">
+                            <img src="images/image 5 (2).png" class="w-100">
+                            <div class="hot__bides-box-info position-absolute d-flex gap-2 align-items-center">
+                                <div class="text-light d-flex gap-3 fs-4 rounded-pill py-2 px-4">
+                                    <span>8s</span>
+                                    <span>34m</span>
+                                    <span>2h</span>
+                                </div>
+                                <div class="p-2 p-xl-3 rounded-circle">
+                                    <img src="images/heart.png" width="28">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="hot__bides-box-bottom mt-3 p-1">
+                            <h5 class="text-light text-end fw-medium fs-3">Virtualland</h5>
+                            <p class="text-light text-end fw-lighter fs-5">By Amirhossein</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <p class="text-light fw-light">آخرین پیشنهاد</p>
+                                <p class="text-light d-flex align-items-center">
+                                    ETH 2,78 
+                                    <img src="images/Group 67.png" class="ms-2">
+                                </p>
+                            </div>
+                            <a href="#" class="box-btn background_gradient1 text-light px-5 py-2 rounded-3 mt-1 d-inline-block">پیشنهاد سریع</a>
+                        </div>
                     </div>
                 </div>
             </div>
