coding top creators html template & styles

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-4">
-                    <div class="hot__bides-box p-3 rounded-4">
+                    <div class="hot__bides-box p-3 rounded-4 mb-5">
                         <div class="hot__bides-box-top position-relative">
                             <img src="images/image 5 (2).png" class="w-100">
                             <div class="hot__bides-box-info position-absolute d-flex gap-2 align-items-center">
@@ -313,6 +313,265 @@
                                 </p>
                             </div>
                             <a href="#" class="box-btn background_gradient1 text-light px-5 py-2 rounded-3 mt-1 d-inline-block">پیشنهاد سریع</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid container-md">
+            <div class="row mt-5 row-gap-5">
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="site__info-box-1 px-3 pt-5 rounded-3 mt-5 position-relative">
+                        <div class="text-light">
+                            <h4 class="fs-2 fw-bold">سرعت</h4>
+                            <p class="site__info-box-text mt-4">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است</p>
+                        </div>
+                        <div class="site__info-box-label rounded-4 d-flex justify-content-center align-items-center position-absolute">
+                            <img src="images/Group 92.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="site__info-box-2 px-3 pt-5 rounded-3 mt-5 position-relative">
+                        <div class="text-light">
+                            <h4 class="fs-2 fw-bold">امنیت</h4>
+                            <p class="site__info-box-text mt-4">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است</p>
+                        </div>
+                        <div class="site__info-box-label rounded-4 d-flex justify-content-center align-items-center position-absolute">
+                            <img src="images/securityuser.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-4 mb-5">
+                    <div class="site__info-box-3 px-3 pt-5 rounded-3 mt-5 position-relative">
+                        <div class="text-light">
+                            <h4 class="fs-2 fw-bold">پشتیبانی</h4>
+                            <p class="site__info-box-text mt-4">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است</p>
+                        </div>
+                        <div class="site__info-box-label rounded-4 d-flex justify-content-center align-items-center position-absolute">
+                            <img src="images/Group 87.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid container-md">
+            <div class="header_container_title my-5 d-flex justify-content-between align-items-center">
+                <div class="d-flex align-items-center gap-3">
+                    <div
+                        class="d-flex align-items-center justify-content-center background_gradient1 rounded-circle icon_header_container">
+                        <img src="images/star1.png">
+                    </div>
+                    <div class="text-light">
+                        <h5 class="fs-3 fw-medium header_title">پر بازدیدترین ها</h5>
+                        <span class="fs-5 fw-light header_subtitle">
+                            Trends
+                        </span>
+                    </div>
+                </div>
+                <div class="">
+                    <a href="#">
+                        <span class="fs-5 text-light arro_text">مشاهده همه</span>
+                        <img src="images/arrowleft.png" class="arrow_icon">
+                    </a>
+                </div>
+            </div>
+            <div class="row row-gap-1 row-gap-lg-4">
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="trend__box">
+                        <div class="trend__box-body rounded-4 position-relative">
+                            <img src="images/image 6.png" class="trend__box-body-image position-absolute">
+                            <h3 class="text-light text-end fw-bold">D'EVOLs</h3>
+                            <div class="d-flex justify-content-between align-items-center text-light mt-3">
+                                <span class="fw-light">
+                                    2,78 ETH
+                                    <img src="images/Group 67.png" class="ms-2" style="width: 18px;">
+                                </span>
+                                <p>By Mahsa</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="trend__box">
+                        <div class="trend__box-body rounded-4 position-relative">
+                            <img src="images/image 6 (1).png" class="trend__box-body-image position-absolute">
+                            <h3 class="text-light text-end fw-bold">D'EVOLs</h3>
+                            <div class="d-flex justify-content-between align-items-center text-light mt-3">
+                                <span class="fw-light">
+                                    2,78 ETH
+                                    <img src="images/Group 67.png" class="ms-2" style="width: 18px;">
+                                </span>
+                                <p>By Hossein</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="trend__box">
+                        <div class="trend__box-body rounded-4 position-relative">
+                            <img src="images/image 6 (2).png" class="trend__box-body-image position-absolute">
+                            <h3 class="text-light text-end fw-bold">D'EVOLs</h3>
+                            <div class="d-flex justify-content-between align-items-center text-light mt-3">
+                                <span class="fw-light">
+                                    2,78 ETH
+                                    <img src="images/Group 67.png" class="ms-2" style="width: 18px;">
+                                </span>
+                                <p>By Majid</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-4 d-block d-lg-none">
+                    <div class="trend__box">
+                        <div class="trend__box-body rounded-4 position-relative">
+                            <img src="images/image 6-3.png" class="trend__box-body-image position-absolute">
+                            <h3 class="text-light text-end fw-bold">D'EVOLs</h3>
+                            <div class="d-flex justify-content-between align-items-center text-light mt-3">
+                                <span class="fw-light">
+                                    2,78 ETH
+                                    <img src="images/Group 67.png" class="ms-2" style="width: 18px;">
+                                </span>
+                                <p>By Saeid</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid container-md">
+            <div class="header_container_title my-5 d-flex justify-content-between align-items-center">
+                <div class="d-flex align-items-center gap-3">
+                    <div
+                        class="d-flex align-items-center justify-content-center background_gradient1 rounded-circle icon_header_container">
+                        <img src="images/user21.png">
+                    </div>
+                    <div class="text-light">
+                        <h5 class="fs-3 fw-medium header_title">هنرمندان برتر</h5>
+                        <span class="fs-5 fw-light header_subtitle">
+                            Top Creators
+                        </span>
+                    </div>
+                </div>
+                <div class="">
+                    <a href="#">
+                        <span class="fs-5 text-light arro_text">مشاهده همه</span>
+                        <img src="images/arrowleft.png" class="arrow_icon">
+                    </a>
+                </div>
+            </div>
+            <div class="row row-gap-4">
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="top__creators-box d-flex justify-content-between align-items-center p-3 rounded-3">
+                        <div class="top__creators-right w_60">
+                            <div class="text-light text-end">
+                                <h4 class="m-0">Negar77</h4>
+                            </div>
+                            <div class="text-end">
+                                <img src="images/Group 104.png" class="my-2">
+                            </div>
+                            <div class="d-flex justify-content-between align-items-center text-light">
+                                <span>فروش کل:</span>
+                                <span>56.32 ETH</span>
+                            </div>
+                        </div>
+                        <div class="top__creators-left">
+                            <img src="images/Group 112.png" class="ps-2">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="top__creators-box d-flex justify-content-between align-items-center p-3 rounded-3">
+                        <div class="top__creators-right w_60">
+                            <div class="text-light text-end">
+                                <h4 class="m-0">Mahdi_nft</h4>
+                            </div>
+                            <div class="text-end">
+                                <img src="images/Group 104.png" class="my-2">
+                            </div>
+                            <div class="d-flex justify-content-between align-items-center text-light">
+                                <span>فروش کل:</span>
+                                <span>56.32 ETH</span>
+                            </div>
+                        </div>
+                        <div class="top__creators-left">
+                            <img src="images/Group 112 (1).png" class="ps-2">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="top__creators-box d-flex justify-content-between align-items-center p-3 rounded-3">
+                        <div class="top__creators-right w_60">
+                            <div class="text-light text-end">
+                                <h4 class="m-0">Amirhossein75</h4>
+                            </div>
+                            <div class="text-end">
+                                <img src="images/Group 104.png" class="my-2">
+                            </div>
+                            <div class="d-flex justify-content-between align-items-center text-light">
+                                <span>فروش کل:</span>
+                                <span>56.32 ETH</span>
+                            </div>
+                        </div>
+                        <div class="top__creators-left">
+                            <img src="images/Group 112 (2).png" class="ps-2">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="top__creators-box d-flex justify-content-between align-items-center p-3 rounded-3">
+                        <div class="top__creators-right w_60">
+                            <div class="text-light text-end">
+                                <h4 class="m-0">Kamran1995</h4>
+                            </div>
+                            <div class="text-end">
+                                <img src="images/Group 104.png" class="my-2">
+                            </div>
+                            <div class="d-flex justify-content-between align-items-center text-light">
+                                <span>فروش کل:</span>
+                                <span>56.32 ETH</span>
+                            </div>
+                        </div>
+                        <div class="top__creators-left">
+                            <img src="images/Group 112 (3).png" class="ps-2">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="top__creators-box d-flex justify-content-between align-items-center p-3 rounded-3">
+                        <div class="top__creators-right w_60">
+                            <div class="text-light text-end">
+                                <h4 class="m-0">Mahsa_art</h4>
+                            </div>
+                            <div class="text-end">
+                                <img src="images/Group 104.png" class="my-2">
+                            </div>
+                            <div class="d-flex justify-content-between align-items-center text-light">
+                                <span>فروش کل:</span>
+                                <span>56.32 ETH</span>
+                            </div>
+                        </div>
+                        <div class="top__creators-left">
+                            <img src="images/Group 112 (4).png" class="ps-2">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="top__creators-box d-flex justify-content-between align-items-center p-3 rounded-3">
+                        <div class="top__creators-right w_60">
+                            <div class="text-light text-end">
+                                <h4 class="m-0">Amirhossein75</h4>
+                            </div>
+                            <div class="text-end">
+                                <img src="images/Group 104.png" class="my-2">
+                            </div>
+                            <div class="d-flex justify-content-between align-items-center text-light">
+                                <span>فروش کل:</span>
+                                <span>56.32 ETH</span>
+                            </div>
+                        </div>
+                        <div class="top__creators-left">
+                            <img src="images/Group 112 (5).png" class="ps-2">
                         </div>
                     </div>
                 </div>
